Cleaner framework setup. Main scene minor adjustments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,21 @@
 cmake_minimum_required(VERSION 3.16)
-project(spqr_simulator)
+project(circus_simulator)
+
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+add_compile_definitions(PROJECT_ROOT="${CMAKE_SOURCE_DIR}")
+
+# Dependencies
 find_package(Eigen3 REQUIRED)
 find_package(glfw3 REQUIRED)
-find_package(console_bridge REQUIRED)
+find_package(mujoco REQUIRED)
 
-set(MUJOCO_PATH /home/brock/mujoco-3.3.0) # needed since I don't have the pre-compiled version of Mujoco
-set(MUJOCO_INCLUDE_DIR ${MUJOCO_PATH}/include)
-set(MUJOCO_LIBRARY ${MUJOCO_PATH}/lib/libmujoco.so)
+# headers
+include_directories(
+    ${MUJOCO_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}/Include
+)
 
-include_directories(${MUJOCO_INCLUDE_DIR})
-link_directories(${MUJOCO_PATH}/lib)
-
+# Subdirectory
 add_subdirectory(Src)
