--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -1,24 +1,13 @@
-add_executable(main
-  main.cpp
-  Simulator.cpp
+file(GLOB_RECURSE SRC_FILES
+    ${CMAKE_SOURCE_DIR}/Src/*.cpp
 )
 
-set(COMMON_INCLUDE_DIRS
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${PROJECT_SOURCE_DIR}
-  ${EIGEN3_INCLUDE_DIR}
-)
+add_executable(main ${SRC_FILES})
 
-target_include_directories(main
-  PUBLIC
-    ${COMMON_INCLUDE_DIRS}
-)
-
+# Link libraries
 target_link_libraries(main
-  glfw
-  ${MUJOCO_LIBRARY}
-)
-
-set_target_properties(main PROPERTIES
-  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
+    mujoco
+    glfw
+    Eigen3::Eigen
+    m
 )
