mujoco installer from release

--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -8,9 +8,17 @@ file(GLOB_RECURSE SRC_FILES
 add_executable(main ${SRC_FILES})
 
 # Link libraries
-target_link_libraries(main
-    mujoco
-    Qt6::Widgets
+# target_link_libraries(main
+#     mujoco
+#     Qt6::Widgets
+#     Qt6::OpenGLWidgets
+#     m
+# )
+
+target_link_libraries(main 
+    PRIVATE
+    ${MUJOCO_LIBRARY} 
+    OpenGL::GL 
+    Qt6::Widgets 
     Qt6::OpenGLWidgets
-    m
 )
