Even more custom scene parsing. Add Eigen3 as dependecy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set_target_properties(mujoco PROPERTIES
 )
 target_include_directories(mujoco INTERFACE "${MUJOCO_ROOT}/include")
 
+find_package(Eigen3 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(yaml-cpp REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Widgets OpenGLWidgets)
