--- a/Resources/exp_scene.yaml
+++ b/Resources/exp_scene.yaml
@@ -1,15 +1,15 @@
-field: KidSize
+field: fieldSPL
 
 teams:
   red:
-    - type: K1
+    - type: Booster-K1
       position: [1.0, 2.0, 0.0]
-      orientation: [1.57, 0.0, 0.0]  # Euler angles in radians
-    - type: T1
+      orientation: [1.57, 0.0, 0.0] 
+    - type: Booster-K1
       position: [4.0, 2.0, 0.0]
       orientation: [1.57, 0.0, 0.0]
 
   blue:
-    - type: K1
+    - type: Booster-K1
       position: [-1.0, -2.0, 0.0]
       orientation: [0.0, 0.0, 0.0]
