--- a/Resources/exp_scene.yaml
+++ b/Resources/exp_scene.yaml
@@ -3,13 +3,17 @@ field: fieldSPL
 teams:
   red:
     - type: Booster-K1
-      position: [1.0, 2.0, 0.0]
-      orientation: [1.57, 0.0, 0.0] 
+      position: [2.0, 1.0, 0.0]
+      orientation: [0.0, 0.0, 1.57] 
     - type: Booster-K1
-      position: [4.0, 2.0, 0.0]
-      orientation: [1.57, 0.0, 0.0]
+      position: [4.0, 1.0, 0.0]
+      orientation: [0.0, 0.0, 1.57]
 
   blue:
     - type: Booster-K1
-      position: [-1.0, -2.0, 0.0]
-      orientation: [0.0, 0.0, 0.0]
+      position: [0.0, 0.0, 0.0]
+      orientation: [0.5, 0.0, 0.0]
+
+    - type: Booster-T1
+      position: [-3.0, 0.0, 0.0]
+      orientation: [0.5, 0.0, 0.0]
