--- a/Resources/Scenes/mixed_scene.yaml
+++ b/Resources/Scenes/mixed_scene.yaml
@@ -3,16 +3,20 @@ field: fieldSPL
 teams:
   red:
     - type: Booster-K1
+      number: 1
       position: [-3.0, 0.0, 0.0]
       orientation: [0.5, 0.0, 0.0]
     - type: Booster-T1
+      number: 3
       position: [-1.0, 0.0, 0.0]
       orientation: [0.5, 0.0, 0.0]
 
   blue:
     - type: Booster-K1
+      number: 1
       position: [3.0, 0.0, 0.0]
       orientation: [0.5, 0.0, 0.0]
     - type: Booster-T1
+      number: 3
       position: [1.0, 0.0, 0.0]
       orientation: [0.5, 0.0, 0.0]
