--- a/Resources/Scenes/mixed_scene.yaml
+++ b/Resources/Scenes/mixed_scene.yaml
@@ -2,12 +2,12 @@ field: fieldSPL
 
 teams:
   red:
-    - type: Booster-K1
-      position: [-3.0, 0.0, 0.5]
-      orientation: [0.0, 0.0, 0.0]
-    # - type: Booster-T1
-    #   position: [-1.0, 0.0, 0.0]
-    #   orientation: [0.5, 0.0, 0.0]
+    # - type: Booster-K1
+    #   position: [-3.0, 0.0, 0.5]
+    #   orientation: [0.0, 0.0, 0.0]
+    - type: Booster-T1
+      position: [-1.0, 0.0, 0.0]
+      orientation: [0.5, 0.0, 0.0]
 
   # blue:
   #   - type: Booster-K1
