--- a/pixi.toml
+++ b/pixi.toml
@@ -17,13 +17,12 @@ version = "0.1.0"
 [package.build]
 backend = { name = "pixi-build-cmake", version = "0.3.*" }
 
-[package.build.config]
-extra-args = ["-DCMAKE_BUILD_TYPE=Release"]
+[package.build-dependencies]
+cmake = "4.1.*"
 
 [package.host-dependencies]
 python = "3.12.*"
-cmake = "3.24.*"
-nanobind = "2.4.*"
+nanobind = "2.8.*"
 eigen = ">=3.4.0,<4"
 yaml-cpp = ">=0.8.0,<0.9"
 nlohmann_json = ">=3.12.0,<4"
